[package]
name = "kunit"
version = "0.1.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "A test runner for Rust-based operating system kernels."
license = "MIT"
repository = "https://github.com/philogroves/kunit"

[dependencies]
conquer-once = { version = "0.4.0", default-features =  false }
heapless = "0.9.1"
kunit_macros = { path = "../kunit_macros" }
spin = "0.10.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.4"
uart_16550 = "0.4.0"